Use CMS with CMSClassUnloadingEnabled. Should mitigate PermGen errors
The option "CMSClassUnloadingEnabled" (Concurrent Mark Sweep class unloading)
has apparently no effect unless "-XX:+UseConcMarkSweepGC" is also activated.
Crossing fingers, this could mitigate the ghastly PermGen errors recently seen.